feat: connect login to back

--- a/src/app/modules/auth/components/register-form/register-form.component.html
+++ b/src/app/modules/auth/components/register-form/register-form.component.html
@@ -13,8 +13,7 @@
     <div *ngIf="form.controls.name.touched && form.controls.name.invalid">
       <p
         *ngIf="form.controls.name.hasError('required')"
-        class="font-medium text-red-500 text-xs mt-1 ml-1"
-      >
+        class="font-medium text-red-500 text-xs mt-1 ml-1">
         This field is mandatory
       </p>
     </div>
@@ -33,14 +32,12 @@
     <div *ngIf="form.controls.email.touched && form.controls.email.invalid">
       <p
         *ngIf="form.controls.email.hasError('required')"
-        class="font-medium text-red-500 text-xs mt-1 ml-1"
-      >
+        class="font-medium text-red-500 text-xs mt-1 ml-1">
         This field is mandatory
       </p>
       <p
         *ngIf="form.controls.email.hasError('email')"
-        class="font-medium text-red-500 text-xs mt-1 ml-1"
-      >
+        class="font-medium text-red-500 text-xs mt-1 ml-1">
         This field should be a email
       </p>
     </div>
@@ -61,19 +58,15 @@
         <fa-icon [icon]="showPassword ? faEye : faEyeSlash"></fa-icon>
       </button>
     </div>
-    <div
-      *ngIf="form.controls.password.touched && form.controls.password.invalid"
-    >
+    <div *ngIf="form.controls.password.touched && form.controls.password.invalid">
       <p
         *ngIf="form.controls.password.hasError('required')"
-        class="font-medium text-red-500 text-xs mt-1 ml-1"
-      >
+        class="font-medium text-red-500 text-xs mt-1 ml-1">
         This field is mandatory
       </p>
       <p
         *ngIf="form.controls.password.hasError('minlength')"
-        class="font-medium text-red-500 text-xs mt-1 ml-1"
-      >
+        class="font-medium text-red-500 text-xs mt-1 ml-1">
         This field should be greater than 6 characters
       </p>
     </div>
