--- a/src/app/modules/auth/components/login-form/login-form.component.html
+++ b/src/app/modules/auth/components/login-form/login-form.component.html
@@ -54,13 +54,19 @@
         This field should be greater than 6 characters
       </p>
     </div>
+    <div *ngIf="status == 'error'">
+      <p
+        class="font-medium text-red-500 text-xs mt-1 ml-1">
+        Credentials invalid
+      </p>
+    </div>
   </div>
   <div>
     <app-btn
       typeBtn="submit"
       color="success"
-      [loading]="status === 'loading'"
-      >Login</app-btn
-    >
+      [loading]="status === 'loading'">
+      Login
+    </app-btn>
   </div>
 </form>
