feat: save refresh token

--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -123,6 +123,9 @@
         <li>
           <button class="block py-2 px-4 text-sm text-gray-700" (click)="logout()">Log out</button>
         </li>
+        <li>
+          <button class="block py-2 px-4 text-sm text-gray-700" (click)="isValidToken()"> Validate token</button>
+        </li>
       </ul>
     </div>
   </ng-template>
